--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "react-typewriter-effect": "^1.1.0",
     "web-vitals": "^2.1.4"
